{
    "name": "CursorControls",
    "maps": [
        {
            "name": "BathTime",
            "id": "145d10d3-1fbf-4b2a-a684-7b2b4e997fd5",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "bfac517f-4181-4a32-b23f-d039adf83d88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "a17b3e89-9a70-4b6b-925b-d51e0368a2d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "ed22fe7a-0430-40da-98f2-b901690ced94",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d425ed4c-2a5f-415d-8902-6343a82ac5a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0e55e12-c371-4a2b-9af3-afd31fbab5cc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78405c49-f20e-4300-9e62-b80cb585e06d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mini2",
            "id": "09926a2b-230a-40f1-af6d-88ed25ce42ed",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "f03d0911-8bf2-4465-8f56-74229036d821",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3f3a396-639c-4721-80f9-9a26fcb2e6e8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}